docs: delete currency handler
